chore: add support for compile and deploy using Java 17 and above