@@ -41,7 +41,7 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
-      <version>1.18.12</version>
+      <version>1.18.38</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -135,6 +135,9 @@
             </dependency>
         </dependencies>
         <configuration>
+          <argLine>
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+          </argLine>
           <additionalClasspathElements>
             <additionalClasspathElement>src/test/java/</additionalClasspathElement>
           </additionalClasspathElements>
